# n_element

./: README.md  main.py  pyproject.toml
src/: sequence.py
tests/: test_sequence.py
